styles/style.css
@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Roboto:ital,wght@0,100;0,300;1,100&display=swap");

:root {
  --bg1: rgba(255, 255, 255, 0.1);

  --textCol: #f5fffa;

  --accent1: #e76f51;
  --accent2: #e9c46a;
  --accent3: #2a9d8f;

  --fontFamilyTitile: "Comfortaa", cursive;
  --fontFamilySecondary: "300 Roboto", sans-serif;
}

* {
  margin: 0 auto;
  box-sizing: border-box;
  font-family: var(--fontFamilySecondary);
  color: var(--textCol);
  font-size: 1.05em;
  font-weight: 100;
}

html {
  width: 100%;
  height: 100%;
  background: url("../assets/bg-blurx.jpg") no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

h1 {
  text-align: center;
  margin: 5% 0;
  font-family: var(--fontFamilyTitile);
  letter-spacing: 0.1em;
  font-size: 2em;
  color: var(--accent2);
}

button,
.box {
  display: flex;
  border-radius: 8px;
  width: 500px;
  margin-top: 16px;
  padding: 16px 30px;
  justify-content: space-between;
  background-color: var(--bg1);
  align-items: baseline;
}

button > *,
.box > * {
  margin: 0;
}

/* inputs */
input[type="number"]::-webkit-inner-spin-button,
input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
}

input[type="time"]::-webkit-calendar-picker-indicator {
  background: none;
  display:none;

}


input[type="time"] {
  padding-left: 20px;
  padding-right: 0;
}

input[type="time"],
input[type="number"],
#totalExerciseTime {
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
  font-size: 1.5em;
}

input[type="text"] {
  text-align: center;
  padding: 5px;
}

/* workouts ----------------------------------------------- */
.workouts {
  margin-bottom: 200px;
}

.workouts button {
  border: none;
}

#addWorkout,
#saveWorkout {
  width: max-content;
  margin-top: 30px;
  color: var(--accent3);
  font-weight: bold;
  border: none;
  transition: 0.3s;
}
#addWorkout:hover,
#saveWorkout:hover {
  box-shadow: 0 0 8px 2px var(--accent3);
  cursor: pointer;
}

.backButton {
  width: max-content;
  margin-top: 30px;
  color: var(--accent1);
  font-weight: bold;
  border: none;
  transition: 0.3s;
}

.backButton:hover {
  box-shadow: 0 0 8px 2px var(--accent1);
  cursor: pointer;
}

.backButton i {
  padding: 4px 10px 4px 0px;
  color: var(--accent1);
}

.buttons {
  display: flex;
  width: 500px;
}

/* workout ------------------------------------------------ */
.workout {
  display: none;
  margin-bottom: 200px;
}

.grid {
  border-radius: 8px;
  width: 500px;
  margin-top: 16px;
  padding: 30px;
  justify-content: space-between;
  background-color: var(--bg1);
  display: grid;
  width: 500px;
  grid-auto-columns: 1fr;
  grid-auto-rows: auto auto 10px auto;
  grid-template-areas:
    "exerciseName exerciseName exerciseName"
    ". totalExerciseTime ."
    ". . ."
    "sets work rest"
    "setsLabel workLabel restLabel"
    "addExercise addExercise addExercise";

  gap: 10px;
  -webkit-backdrop-filter: blur(10px);
  backdrop-filter: blur(10px);
}

.grid > * {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
  align-items: center;
  text-align: center;
}

#exerciseName {
  grid-area: exerciseName;
  width: min-content;
}
#totalExerciseTime {
  grid-area: totalExerciseTime;
}
#sets {
  grid-area: sets;
}
#work {
  grid-area: work;
  width: fit-content;
}

#rest {
  grid-area: rest;
  width: fit-content;
}
#setsLabel {
  grid-area: setsLabel;
}
#workLabel {
  grid-area: workLabel;
}
#restLabel {
  grid-area: restLabel;
}

/* add exercise button */
#addExercise {
  grid-area: addExercise;
  width: max-content;
  flex-direction: row;
  padding: 6px 18px;
  background-color: var(--bg1);
  color: var(--accent3);
  font-weight: bold;
  border: none;
  transition: 0.3s;
}
#addExercise:hover {
  box-shadow: 0 0 8px 2px var(--accent3);
  cursor: pointer;
}

#addExercise i,
#addWorkout i,
#saveWorkout i {
  padding: 4px 0 4px 10px;
  color: var(--accent3);
}

.box > input,
.grid input {
  background-color: transparent;
  border: none;
  border-bottom: 2px solid gray;
  outline: none;
}

#workoutName {
  width: 100%;
}

.savedExercises button {
  width: fit-content;
  padding: 5px;
  border: none;
  background-color: transparent;
}

.savedExercises i {
  color: var(--accent1);
}

/* play --------------------------------------------------- */
.play {
  display: none;
  margin-bottom: 200px;
}

#timer {
  color: var(--textCol);
  font-size: 5em;
}

@media only screen and (max-width: 600px) {
  html {
    font-size: 0.9em;
  }
  .box {
    width: 400px;
  }

  .workouts button {
    width: 350px;
  }

  .buttons {
    width: 400px;
  }

  .grid {
    width: 400px;
  }
}

@media only screen and (min-width: 601px) and (max-width: 1000px) {
  body {
    font-size: 0.9em;
  }
  .box {
    width: 450px;
  }

  .workouts button {
    width: 450px;
  }

  .grid {
    width: 450px;
  }
  .buttons {
    width: 450px;
  }
}

